--- a/src/Style/Style.sass
+++ b/src/Style/Style.sass
@@ -26,7 +26,7 @@ body
   background-image: linear-gradient($color-theme-trans-light, $color-theme-trans-light), url('../Media/Nupar.jpg')
   background-repeat: no-repeat
   object-fit: contain
-  // padding-bottom: 65.89%
+  min-height: 100%
   background-origin: border-box
   background-attachment: fixed
   background-size: cover
