--- a/src/Style/Style.css
+++ b/src/Style/Style.css
@@ -14,6 +14,7 @@ body {
   background-image: linear-gradient(rgba(39, 51, 107, 0.25), rgba(39, 51, 107, 0.25)), url("../Media/Nupar.jpg");
   background-repeat: no-repeat;
   object-fit: contain;
+  min-height: 100%;
   background-origin: border-box;
   background-attachment: fixed;
   background-size: cover;
