--- a/src/Style/Style.sass
+++ b/src/Style/Style.sass
@@ -17,24 +17,36 @@ $color-theme-trans-light: rgba(39, 51, 107, 0.25)
     box-sizing: border-box
 
 .App
-   width: 100vw
-   min-height: 120vh
+    width: 100vw
+    min-height: 120vh
+    background-image: linear-gradient($color-theme-trans-light, $color-theme-trans-light), url('../Media/Nupar.jpg')
+    background-repeat: no-repeat
+    object-fit: contain
+    min-height: 120vh
+    background-origin: border-box
+    background-attachment: fixed
+    background-size: cover
+    -webkit-background-size: cover
+    -moz-background-size: cover
+    -o-background-size: cover
+    background-position-x: 64.5% 
+    background-position-y: 70%
 
 body 
   text-align: center
   color: $color-font
-  background-image: linear-gradient($color-theme-trans-light, $color-theme-trans-light), url('../Media/Nupar.jpg')
-  background-repeat: no-repeat
-  object-fit: contain
-  min-height: 100%
-  background-origin: border-box
-  background-attachment: fixed
-  background-size: cover
-  -webkit-background-size: cover
-  -moz-background-size: cover
-  -o-background-size: cover
-  background-position-x: 64.5% 
-  background-position-y: 70%
+  // background-image: linear-gradient($color-theme-trans-light, $color-theme-trans-light), url('../Media/Nupar.jpg')
+  // background-repeat: no-repeat
+  // object-fit: contain
+  // min-height: 120vh
+  // background-origin: border-box
+  // background-attachment: fixed
+  // background-size: cover
+  // -webkit-background-size: cover
+  // -moz-background-size: cover
+  // -o-background-size: cover
+  // background-position-x: 64.5% 
+  // background-position-y: 70%
 
 
 
