--- a/src/Style/_workdisplay.sass
+++ b/src/Style/_workdisplay.sass
@@ -3,10 +3,14 @@
     width: 100vw
     background: $color-theme-trans
     padding: 50px 30px 30px 30px
+    a
+        text-decoration: none
+        color: $color-font
+        cursor: pointer
     h2
         font-family: $font-header
         font-size: 2em
-        padding-bottom: 20px
+        margin-bottom: 20px
     .workDisplayText
         text-align: left
         padding: 0 30px 30px 30px
@@ -45,7 +49,7 @@
 
 @media (min-width: $bp-tablet)
     .workDisplay
-        height: calc(100vh - 75px)
+        // height: calc(100vh - 75px)
     .workDisplayText 
         width: 500px
         margin: 0 auto
